--- a/projeto_integrador_1_b/.classpath
+++ b/projeto_integrador_1_b/.classpath
@@ -7,5 +7,6 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry exported="true" kind="lib" path="mysql-connector-j-8.0.33.jar"/>
+	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
