--- a/projeto_integrador_1_b/.classpath
+++ b/projeto_integrador_1_b/.classpath
@@ -6,8 +6,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="mysql-connector-j-8.0.33.jar"/>
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="C:/Users/User/Documents/GitHub/projeto_integrador_/projeto_integrador_1_b/gson-2.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/User/Documents/GitHub/projeto_integrador_/projeto_integrador_1_b/mysql-connector-j-8.0.33.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
